--- a/responsive.css
+++ b/responsive.css
@@ -56,3 +56,62 @@
         height: auto;
     }
 }
+
+@media screen and (min-width: 513px) and (max-width: 768px) {
+    header {
+        align-items: center;
+        margin-left: 0%;
+        margin-right: 0%;
+        width: 100%;
+    }
+
+    #assets-logo {
+        width: 35px;
+        height: 35px;
+    }
+    
+    #assets-logo-text {
+        font-size: 16px;
+    }
+
+    #header-right-section {
+        padding: 0px 5px;
+        gap: 5px;
+    }
+
+    #main-left-section {
+        margin-left: 0px;
+        margin-right: 10px;
+        flex-direction: column;
+        margin-top: 20px;
+    }
+
+    #main-section {
+        flex-direction: column;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    #section-rows {
+        flex-direction: column;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    #custom-alert {
+        width: 90%;
+        font-size: 16px;
+    }
+
+    #section-card {
+        width: 100%;
+
+    }
+
+    #main-right-section {
+        margin-left: 0px;
+        width: 100%;
+        margin-top: 20px;
+        height: auto;
+    }
+}
